# property_evaluation

./: .gitignore  CMakeLists.txt  README.md  coverage_parser.py  functions.py  gen_files.py  main.py  package.py  property_parser.py  run_sim.py  sva_parser.py  testing.py
Assertion_based_verification/: assertion_parser_main.py  sim_arbiter.do
Assertion_based_verification/Testbench/: arbiter_tb.sv  bfm_arbiter.sv  tb_userinterface.sv
DUTs/: arbiter.v
